...
              onPulsar={() => navigation.navigate('DetallePunto', { id: item.id })}
            />
          )}
        />
      </AsyncStateView>

      <AppButton title="+ Agregar punto de interés" onPress={() => navigation.navigate('CrearPunto')} />
    </View>
  );
};

const styles = StyleSheet.create({
  container: {
...
